syntax = "proto3";

package vehicle;

message Vehicle {
    string id = 1;
    string licensePlate = 2;
    string brand = 3;
    string model = 4;
    int year = 5;
}

message VehicleRequest {
    string id = 1;
}

message VehicleList {
    repeated Vehicle vehicles = 1;
}

message VehicleCreateRequest {
    string licensePlate = 1;
    string brand = 2;
    string model = 3;
    int year = 4;
}

message VehicleUpdateRequest {
    string id = 1;
    string licensePlate = 2;
    string brand = 3;
    string model = 4;
    int year = 5;
}

message VehicleResponse {
    Vehicle vehicle = 1;
}

service VehicleService {
    rpc GetVehicle(VehicleRequest) returns (VehicleResponse);
    rpc CreateVehicle(VehicleCreateRequest) returns (VehicleResponse);
    rpc UpdateVehicle(VehicleUpdateRequest) returns (VehicleResponse);
    rpc DeleteVehicle(VehicleRequest) returns (VehicleResponse);
    rpc ListVehicles(empty) returns (VehicleList);
}
